--- a/app/src/main/res/menu/activity_pocetni_ekran_drawer.xml
+++ b/app/src/main/res/menu/activity_pocetni_ekran_drawer.xml
@@ -5,33 +5,41 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_kompas"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:title="Kompas" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_lampa"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="Lampa"/>
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_vremenska_prognoza"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:title="Vremenska prognoza" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/nav_prva_pomoc"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Prva pomoc" />
+        <item
+            android:id="@+id/nav_lista_sluzbi"
             android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:title="Lista sluzbi po drzavama" />
+        <item
+            android:id="@+id/nav_morzeova_azbuka"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Morzeova azbuka" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Podesavanja">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_sos_poruka"
                 android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
+                android:title="Podesavanje SOS poruke" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_jezik"
                 android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+                android:title="Jezik" />
         </menu>
     </item>
 
